--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
+    "@studio-freight/lenis": "^1.0.42",
     "bootstrap": "^5.3.3",
+    "heroicons": "^2.2.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.1",
     "tw-elements": "^2.0.0"
   },
